--- a/style.css
+++ b/style.css
@@ -1,82 +1,26 @@
 
-.block1,.block2,.block3,.block4,.block5,.block6{
-    background-color: lightpink;
-    border-radius: 15px;
-    width:500px;
-    text-align: center;
-    padding: 50px;
-    margin: 30px;
-    display: inline-block;
-    padding-bottom: 40px;
-    justify-content: center;
-   
+.block1,.block2{
+
+   background-color: aquamarine;
+   padding: 60px;
+   margin: 60px;
+   border-radius: 10px;
+   width: 400px;
+   text-align: center;
+   display: inline-block;
 
 }
 
-.box{
-    background-color:black;
-    border-radius:20px;
-    width: 40%;
-    padding: 8px;
-    margin-top: 30px;
-    border-width:0;
-    color:white;
-    font-size:large;
-    font-family: Roboto;
-    box-shadow: 20px,solid;
 
 
-}
+
+
 .bg_container{
-    background-color: black;
+    background-color:black;
     background-size: cover;
+    height: 100%;
+    padding: 20px;
 
 }
 
 
-h1{
-    font-size:xx-large;
-}
-
-p{
-    font-size:large;
-
-}
-.card{
-    border-radius: 15px;
-    width:520px;
-    text-align: center;
-    padding: 40px;
-    margin: 30px;
-    display: inline-block;
-    font-size: x-large;
-    font-weight: bolder;
-    color: black;
-    
-}
-
-.card2{
-    border-radius: 15px;
-    width:168px;
-    text-align: center;
-    padding: 50px;
-    margin: 30px;
-    padding-bottom: 40px;
-    display: inline-block;
-    font-size: large;
-    font-weight: bolder;
-    color: black;
-}
-
-.card4{
-    background-color: orange;
-    border-radius: 15px;
-    width:520px;
-    text-align: center;
-    padding: 40px;
-    margin: 30px;
-    display: inline-block;
-    font-size: large;
-    font-weight: bolder;
-    color: black;
-}
